[metadata]
name = repomaker
description = Create F-Droid repositories
# TODO Repomaker Website https://gitlab.com/fdroid/fdroid-website/issues/70
url = https://gitlab.com/fdroid/repomaker
author = F-Droid Community
author_email = team@f-droid.org
keywords =  android, app store, repository
license = AGPL-3.0

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Topic :: Utilities
    Topic :: System :: Software Distribution

long_description = file: README.md
description-file = README.md