[metadata]
author = F-Droid Community
author_email = team@f-droid.org
keywords =  android, app store, repository

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Utilities
    Topic :: System :: Software Distribution

long_description = file: README.md
description-file = README.md