[metadata]
author = F-Droid Community
author_email = team@f-droid.org
keywords =  android, app store, repository

# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Environment :: Web Environment
    Framework :: Django
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities
    Topic :: System :: Software Distribution

long_description = file: README.md
description-file = README.md
license_file = LICENSE


# uploading here requires Python 3.5.3+ or setuptools 27+,
# use instead: twine upload --sign dist/fdroidserver*.tar.gz
[aliases]
release = version_check repomaker_static_check compile_catalog sdist


# All this below is for Babel config.  Ideally we would only use
# Babel, but it is still missing some key features that gettext gives
# us.  So for now, this Babel setup is just to make it easy for Python
# people who are used to it.  Babel is missing:
#
# * properly tagging various Python formats in the comments
# * --add-location=file
# * --join-existing
# * --sort-output on update
#
# So for now the canonical way to update the template and translation
# files is: `make -C locale`

[extract_messages]
keywords = _
charset = UTF-8
sort_output = true
no_location = true
add-comments = true
output_file = repomaker/locale/django.pot
msgid-bugs-address = https://gitlab.com/fdroid/repomaker/issues

[update_catalog]
input_file = repomaker/locale/django.pot
output_dir = repomaker/locale

[init_catalog]
input_file = repomaker/locale/django.pot
output_dir = repomaker/locale

[compile_catalog]
domain = django
directory = repomaker/locale
